--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "watchify -t reactify -t babelify -t browserify-shim ./index.jsx -o 'exorcist ./dest/build.js.map > ./dest/build.js' -d",
+    "watch": "watchify -t [ babelify --presets [ es2015 react ]  ] -t browserify-shim ./index.jsx -o 'exorcist ./dest/build.js.map > ./dest/build.js' -d",
     "server": "live-server --port=8003",
     "start": "npm run watch & npm run server"
   },
@@ -20,11 +20,11 @@
     "material-design-lite": "^1.1.1",
     "minesweeper-engine": "^0.1.0",
     "react": "^15.0.2",
-    "react-dom": "^15.0.2",
-    "reactify": "^1.1.1"
+    "react-dom": "^15.0.2"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
