--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "git+https://github.com/meganetaaan/minesweeper-standalone.git"
   },
   "dependencies": {
+    "countup-timer": "^0.1.3",
     "jquery": "^2.2.1",
     "material-design-lite": "^1.1.1",
     "minesweeper-engine": "^0.3.3",
