--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "watchify -t [ babelify --presets [ es2015 react ]  ] -t browserify-shim ./index.jsx -o 'exorcist ./dest/build.js.map > ./dest/build.js' -d",
+    "watch": "watchify -t [ babelify --presets [ es2015 react ]  ] -t browserify-shim ./index.jsx -o \"exorcist ./dest/build.js.map > ./dest/build.js\" -d",
     "server": "live-server --port=8003 --watch=index.html,dest/build.js",
     "start": "npm run watch & npm run server"
   },
@@ -24,6 +24,7 @@
     "react-dom": "^15.0.2"
   },
   "devDependencies": {
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
